mimij/mimij/AnalisiSintactico/Gramatica.txt
S' -> Program
Program -> Decl Program
Program -> Decl
Decl -> Type ident ;
Decl -> void ident ( Formals ) StmtBlock
Decl -> Type ident ( Formals ) StmtBlock
Decl -> static TYPEX ident ;
Decl -> class ident Extends Implements { FieldX }
Decl -> interface ident { PrototypeS }
TYPEX -> int
TYPEX -> double
TYPEX -> boolean
TYPEX -> string
Type -> TYPEX
Type -> ident
Type -> Type []
Formals -> Type ident , Formals
Formals -> Type ident
Extends -> extends ident
Extends -> e
Implements -> implements Ident
Implements -> e
Ident -> ident , ident Ident
Ident -> ident
FieldX -> Field FieldX
FieldX -> e
Field -> Type ident ;
Field -> void ident ( Formals ) StmtBlock
Field -> Type ident ( Formals ) StmtBlock
Field -> static TYPEX ident ;
PrototypeS -> Prototype PrototypeS
PrototypeS -> e
Prototype -> FDecl ident ( Formals ) ;
StmtBlock -> { VariableDecl ConstDecl StmtX }
VariableDecl -> Type ident ; VariableDecl
VariableDecl -> e
ConstDecl -> static TYPEX ident ; ConstDecl
ConstDecl -> e
StmtX -> Stmt StmtX
StmtX -> e
Stmt -> Expr ; 
Stmt -> ;
Stmt -> if ( Expr ) Stmt ElseStmt
Stmt -> while ( Expr ) Stmt
Stmt -> for ( Expr ; Expr ; Expr ) Stmt
Stmt -> break ;
Stmt -> return Expr ;
Stmt -> System ( ExprX , ) ;
Stmt -> StmtBlock
ElseStmt -> else Stmt
ElseStmt -> e
ExprX -> Expr ExprX
ExprX -> Expr
Expr -> ident = A
Expr -> A
A -> B AX
AX -> != B AX
AX -> e
B -> B || C
B -> C
C -> C > D
C -> C >= D
C -> D
D -> D - E
D -> E
E -> E / F
E -> E % F
E -> F
F -> - G
F -> ! G
F -> G
G -> G . ident = Expr
G -> G . ident
G -> H
H -> ( Expr )
H -> this
H -> ident
H -> New ( ident )
H -> intConstant
H -> doubleConstant
H -> booleanConstant
H -> stringConstant
H -> null
